<resources>
    <string name="app_name">messenger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_default_username">Ghoul</string>
    <string name="settings_default_status">в сети</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_default_phone">+79295267388</string>
    <string name="settings_lable_phone_number">Нажмите, чтобы изменить номер телефона</string>
    <string name="settings_default_login">Ghoul</string>
    <string name="settings_lable_login">Имя пользователя</string>
    <string name="settings_lable_bio">О себе</string>
    <string name="default_bio">тяжело отвечать и следить</string>
    <string name="settings_default_bio">тяжело отвечать и следить</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_we_sent">Мы отправили SMS с кодом проверки на ваш телефон</string>
    <string name="register_hint_default_code">- - - - - -</string>
    <string name="register_title_your_phone">Ваш телефон</string>
    <string name="register_toast_enter_phone">Введите номер телефона</string>
    <string name="settings_hint_input_name">Имя</string>
    <string name="settings_hint_input_surname">Фамилия(необязательно)</string>
    <string name="settings_toast_name_is_empty">Введите имя</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="settings_hint_input_username">username</string>
    <string name="settings_toast_username_is_empty">Имя пользователя не может быть пустым</string>
    <string name="settings_toast_waning_empty_username">Такой пользователь уже существует</string>
    <string name="settings_hint_input_bio">bio</string>
    <string name="single_chat_call">Позвонить</string>
    <string name="single_chat_videocall">Видеозвонок</string>
</resources>