<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.settings.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_header_bloc"

        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/settings_user_photo"

            android:layout_width="@dimen/settings_user_photo_width"
            android:layout_height="@dimen/settings_user_photo_height"
            android:src="@drawable/default_photo"
            app:civ_circle_background_color="@color/white"
            android:layout_marginStart="@dimen/app_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/settings_fullname"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            tools:text="Vilen Pogosyan"
            android:layout_marginTop="@dimen/app_small_margin"
            android:textSize="@dimen/normalText"
            android:layout_marginStart="@dimen/app_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/settings_user_photo"
            app:layout_constraintStart_toEndOf="@id/settings_user_photo"/>

        <TextView
            android:id="@+id/settings_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryLight"
            tools:text="@string/settings_default_status"
            android:textSize="@dimen/smallText"
            android:layout_marginStart="@dimen/app_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_fullname"
            app:layout_constraintStart_toEndOf="@id/settings_user_photo"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/settings_text_account"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary"
        android:text="@string/settings_text_account"
        app:layout_constraintTop_toBottomOf="@id/settings_header_bloc"
        android:layout_marginStart="@dimen/app_margin"
        android:textSize="@dimen/smallText"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/vertical_large_margin" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_number_phone"

        app:layout_constraintTop_toBottomOf="@id/settings_text_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/settingsButtons">

        <TextView
            android:id="@+id/settings_phone_number"

            tools:text="@string/settings_default_phone"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_number_phone"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normalText" />

        <TextView
            android:id="@+id/settings_lable_phone_number"

            android:text="Номер телефона"
            app:layout_constraintTop_toBottomOf="@id/settings_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/smallText" />

        <View
            app:layout_constraintTop_toBottomOf="@id/settings_lable_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_username"

        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_number_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/settingsButtons">

        <TextView
            android:id="@+id/settings_username"
            tools:text="@string/settings_default_login"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_username"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normalText" />

        <TextView
            android:id="@+id/settings_lable_login"

            android:text="@string/settings_lable_login"
            app:layout_constraintTop_toBottomOf="@id/settings_username"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/smallText" />

        <View
            app:layout_constraintTop_toBottomOf="@id/settings_lable_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_bio"

        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/settingsButtons">

        <TextView
            android:id="@+id/settings_bio"

            tools:text="@string/settings_default_bio"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_bio"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normalText" />

        <TextView
            android:id="@+id/settings_lable_bio"

            android:text="@string/settings_lable_bio"
            app:layout_constraintTop_toBottomOf="@id/settings_bio"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/smallText" />

        <View
            app:layout_constraintTop_toBottomOf="@id/settings_lable_bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/settings_change_photo"

        android:layout_width="@dimen/change_btn_change_photo_width"
        android:layout_height="@dimen/change_btn_change_photo_height"
        android:src="@drawable/ic_camera"
        app:civ_circle_background_color="@color/white"
        android:layout_marginEnd="@dimen/app_margin"
        app:layout_constraintBottom_toBottomOf="@id/settings_header_bloc"
        app:layout_constraintTop_toBottomOf="@id/settings_header_bloc"
        app:civ_border_color="@color/material_drawer_hint_text"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
























